Tekton.java javitas 2